# agent_it_support

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py
agents/action/: Dockerfile  a2a_server.py  action.py  app.py  kafka_producer.py  requirements.txt
agents/analyst/: Dockerfile  a2a_server.py  analyst.py  app.py  generate_tickets.py  nl2sql.py  requirements.txt  startup.py  tickets_db.py
agents/notifier/: Dockerfile  app.py  consumer.py  requirements.txt
agents/orchestrator/: Dockerfile  __init__.py  a2a_client.py  app.py  graph.py  requirements.txt  router.py
agents/rag/: Dockerfile  __init__.py  a2a_server.py  app.py  indexer.py  opensearch_client.py  rag.py  requirements.txt  startup.py
deploy/argocd/: application.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  OBSERVABILITY.md  PROBLEM.md
docs/knowledge_base/: access-revoke.md  confluence-access.md  email-setup-mobile.md  expense-report.md  hardware-repair.md  jira-access.md  laptop-request.md  meeting-rooms.md  mfa-setup.md  onboarding-day1.md  password-reset.md  phishing-report.md  printer-setup.md  security-policy.md  shared-drive-access.md  software-install.md  vacation-request.md  vpn-clients.md  vpn-setup.md  (+1 more)
shared/: __init__.py  config.py  embeddings.py  llm.py  metrics.py  observability.py
tests/: conftest.py  test_action.py  test_analyst.py  test_llm.py  test_notifier.py  test_orchestrator.py  test_rag.py  test_router.py
ui/: Dockerfile  requirements.txt  streamlit_app.py
(+13 files in other folders)
