[project]
name = "askops"
version = "0.1.0"
description = "AskOps — мини-помощник первой линии ИТ-поддержки (оркестратор + RAG-агент, A2A)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F — pyflakes+pycodestyle, I — isort, UP — pyupgrade, B — bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # длину строк проверяем мягко

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
